src/core/export/interface.h

// Typedef for boolean value (since the standard doesn't specify
// its size
typedef uint32_t Boolean;
typedef struct {
	float x;
	float y;
	float z;
} Vec3;
typedef enum {
	MAT_LAMBERT,
	MAT_COUNT
} MaterialType;
typedef enum {
	CAM_PINHOLE,
	CAM_COUNT
} CameraType;
typedef enum {
	RENDERER_CPU_PT,
	RENDERER_GPU_PT,
	RENDERER_COUNT
} RendererType;
typedef enum {
	TARGET_RADIANCE,
	TARGET_POSITION,
	TARGET_ALBEDO,
	TARGET_NORMAL,
	TARGET_LIGHTNESS,
	TARGET_COUNT
} RenderTarget;
typedef enum {
	LIGHT_POINT,
	LIGHT_SPOT,
	LIGHT_DIRECTIONAL,
	LIGHT_ENVMAP,
	LIGHT_COUNT
} LightType;
typedef enum {
	PROFILING_NONE,
	PROFILING_LOW,
	PROFILING_HIGH,
	PROFILING_ALL,
} ProfilingLevel;
typedef enum {
	NONE = 0,
	OBJ_EMISSIVE = 1
} ObjectFlags;
// Typedefs for return values
// Not to be accessed directly!
typedef int32_t IndexType;
typedef uint64_t LodLevel;
typedef uint16_t MatIdx;
typedef void* ObjectHdl;
typedef void* InstanceHdl;
typedef void* ScenarioHdl;
typedef const void* ConstScenarioHdl;
typedef void* SceneHdl;
typedef void* MaterialHdl;
typedef void* CameraHdl;
typedef void* LightHdl;
typedef void* TextureHdl;
// Renderer parameter data
enum ParameterType {
	PARAM_INT,
	PARAM_FLOAT,
	PARAM_BOOL
};
CORE_API ObjectHdl CDECL world_create_object(const char* name, ObjectFlags flags);
CORE_API InstanceHdl CDECL world_create_instance(ObjectHdl obj);
CORE_API ScenarioHdl CDECL world_create_scenario(const char* name);
CORE_API ScenarioHdl CDECL world_find_scenario(const char* name);
CORE_API uint32_t CDECL world_get_scenario_count();
CORE_API const char* CDECL world_get_scenario_name(ConstScenarioHdl index);
CORE_API const char* CDECL world_get_scenario_name_by_index(uint32_t index);
CORE_API ConstScenarioHdl CDECL world_get_current_scenario();
// TODO: blended/fresnel materials
// TODO: glass/opaque materials
// TODO: add more cameras
CORE_API CameraHdl CDECL world_add_pinhole_camera(const char* name, Vec3 position,
											   Vec3 dir, Vec3 up, float near,
											   float far, float vFov);
CORE_API LightHdl CDECL world_add_point_light(const char* name, Vec3 position,
										   Vec3 intensity);
CORE_API LightHdl CDECL world_add_spot_light(const char* name, Vec3 position,
										  Vec3 direction, Vec3 intensity,
										  float openingAngleRad,
										  float falloffStartRad);
CORE_API LightHdl CDECL world_add_directional_light(const char* name,
												 Vec3 direction,
												 Vec3 radiance);
CORE_API LightHdl CDECL world_add_envmap_light(const char* name, TextureHdl envmap);
CORE_API CameraHdl CDECL world_get_camera(const char* name);
CORE_API LightHdl CDECL world_get_light(const char* name, LightType type);
CORE_API SceneHdl CDECL world_load_scenario(ScenarioHdl scenario);
CORE_API SceneHdl CDECL world_get_current_scene();
// Scenario interface
CORE_API const char* CDECL scenario_get_name(ScenarioHdl scenario);
CORE_API LodLevel CDECL scenario_get_global_lod_level(ScenarioHdl scenario);
CORE_API Boolean CDECL scenario_set_global_lod_level(ScenarioHdl scenario, LodLevel level);
CORE_API Boolean CDECL scenario_get_resolution(ScenarioHdl scenario, uint32_t* width, uint32_t* height);
CORE_API Boolean CDECL scenario_set_resolution(ScenarioHdl scenario, uint32_t width, uint32_t height);
CORE_API CameraHdl CDECL scenario_get_camera(ScenarioHdl scenario);
CORE_API Boolean CDECL scenario_set_camera(ScenarioHdl scenario, CameraHdl cam);
CORE_API Boolean CDECL scenario_is_object_masked(ScenarioHdl scenario, ObjectHdl obj);
CORE_API Boolean CDECL scenario_mask_object(ScenarioHdl scenario, ObjectHdl obj);
CORE_API LodLevel CDECL scenario_get_object_lod(ScenarioHdl scenario, ObjectHdl obj);
CORE_API Boolean CDECL scenario_set_object_lod(ScenarioHdl scenario, ObjectHdl obj,
										 LodLevel level);
CORE_API IndexType CDECL scenario_get_light_count(ScenarioHdl scenario);
CORE_API const char* CDECL scenario_get_light_name(ScenarioHdl scenario, size_t index);
CORE_API Boolean CDECL scenario_add_light(ScenarioHdl scenario, const char* name);
CORE_API Boolean CDECL scenario_remove_light_by_index(ScenarioHdl scenario, size_t index);
CORE_API Boolean CDECL scenario_remove_light_by_named(ScenarioHdl scenario, const char* name);
CORE_API MatIdx CDECL scenario_declare_material_slot(ScenarioHdl scenario,
													 const char* name, size_t nameLength);
CORE_API MatIdx CDECL scenario_get_material_slot(ScenarioHdl scenario,
												 const char* name, size_t nameLength);
CORE_API MaterialHdl CDECL scenario_get_assigned_material(ScenarioHdl scenario,
														  MatIdx index);
CORE_API Boolean CDECL scenario_assign_material(ScenarioHdl scenario, MatIdx index,
										  MaterialHdl handle);
// Interface for initialization and destruction
CORE_API Boolean CDECL mufflon_initialize(void(*logCallback)(const char*, int));
// TODO
CORE_API Boolean CDECL display_screenshot();
CORE_API Boolean CDECL resize(int width, int height, int offsetX, int offsetY);
CORE_API void CDECL execute_command(const char* command);
CORE_API const char* CDECL core_get_dll_error();